# FastTODO

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  readme.md  requirements.txt  setup.cfg
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
tests/: test_crud.py  test_main.py
