[metadata]
name = FastTODO
version = 0.1.0
description = A simple To-Do app build with FastAPI
author = Marat Shakirov
license = MIT

[options]
packages = find:
python_requires = >=3.10

[flake8]
exclude = .git, .env, .venv, venv, __pycache__, .pytest_cache, build, dist, .idea
max-line-length = 88
ignore = E203, W503

[isort]
profile = black
line_length = 88
known_third_party = fastapi, sqlalchemy

[tool:pytest]
addopts = --maxfail=2 --disable-warnings
testpaths = tests